--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,36 +1,9 @@
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
-if(MSVC)
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /W3")
-else()
-    if ("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0 -g3 -DDEBUG")
-    else()
-        set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
-    endif()
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wextra -Werror -fomit-frame-pointer")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-missing-field-initializers -Wno-unused-parameter -Wno-unused-function")
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-variable -Wno-unused-value -Wno-unused-result -Wno-missing-braces")
-endif()
-
-if(MSVC)
-    set(CMAKE_FLAGS
-        CMAKE_CXX_FLAGS
-        CMAKE_CXX_FLAGS_DEBUG
-        CMAKE_CXX_FLAGS_RELEASE
-        CMAKE_C_FLAGS
-        CMAKE_C_FLAGS_DEBUG
-        CMAKE_C_FLAGS_RELEASE
-    )
-    foreach(CMAKE_FLAG ${CMAKE_FLAGS})
-        string(REPLACE "/MD" "/MT" ${CMAKE_FLAG} "${${CMAKE_FLAG}}")
-        string(REPLACE "/MDd" "/MTd" ${CMAKE_FLAG} "${${CMAKE_FLAG}}")
-    endforeach()
-endif()
-
 file(GLOB ctest_SOURCES ${ctest_SOURCES} ${CMAKE_CURRENT_LIST_DIR}/*.c)
 
 foreach(ctest_src ${ctest_SOURCES})
     get_filename_component(ctest_name ${ctest_src} NAME_WE)
-    add_executable(${ctest_name}_test ${ctest_src})
-    add_test(${ctest_name} ${ctest_name}_test)
+    add_executable(test_${ctest_name} ${ctest_src})
+    add_dependencies(test_${ctest_name} ${PROJECT_NAME})
+    target_link_libraries(test_${ctest_name} ${PROJECT_NAME})
+    add_test(${ctest_name} test_${ctest_name})
 endforeach()
