--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 sudo: false
 language: c
+dist: trusty
 
 install:
   - mkdir build && cd build
@@ -16,7 +17,6 @@ matrix:
 
     # coverage build
     - os: linux
-      dist: trusty
       compiler: gcc-5
       addons:
         apt:
@@ -67,7 +67,6 @@ matrix:
           packages:
             - gcc-6
     - os: linux
-      dist: trusty
       compiler: gcc-7
       addons:
         apt:
@@ -83,7 +82,7 @@ matrix:
         apt:
           sources:
             - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.5
+            - llvm-toolchain-trusty-3.5
           packages:
             - clang-3.5
     - os: linux
@@ -92,7 +91,7 @@ matrix:
         apt:
           sources:
             - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.6
+            - llvm-toolchain-trusty-3.6
           packages:
             - clang-3.6
     - os: linux
@@ -101,7 +100,7 @@ matrix:
         apt:
           sources:
             - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.7
+            - llvm-toolchain-trusty-3.7
           packages:
             - clang-3.7
     - os: linux
@@ -110,7 +109,7 @@ matrix:
         apt:
           sources:
             - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.8
+            - llvm-toolchain-trusty-3.8
           packages:
             - clang-3.8
     - os: linux
@@ -119,11 +118,10 @@ matrix:
         apt:
           sources:
             - ubuntu-toolchain-r-test
-            - llvm-toolchain-precise-3.9
+            - llvm-toolchain-trusty-3.9
           packages:
             - clang-3.9
     - os: linux
-      dist: trusty
       compiler: clang-4.0
       addons:
         apt:
