--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,6 +9,7 @@ environment:
   matrix:
     - msvc: 'Visual Studio 12 2013'
     - msvc: 'Visual Studio 14 2015'
+    - msvc: 'Visual Studio 14 2017'
 
 configuration:
   - Debug
