did this work on msvc ? NOP

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,11 +26,17 @@ add_library(${PROJECT_NAME} STATIC ${cute_SOURCES} ${cute_HEADERS})
 target_include_directories(${PROJECT_NAME} PUBLIC ${cute_INCLUDE_DIR})
 target_include_directories(${PROJECT_NAME} PRIVATE ${cute_SOURCE_DIR})
 set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "${cute_HEADERS}")
-target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Werror -Wextra)
+
+target_compile_options(${PROJECT_NAME} PRIVATE -Wall)
+if(NOT MSVC)
+    target_compile_options(${PROJECT_NAME} PRIVATE -Werror -Wextra)
+endif()
 if ("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
-    target_compile_options(${PROJECT_NAME} PRIVATE -O0 -g3)
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DDEBUG")
-else()
+    if(NOT MSVC)
+        target_compile_options(${PROJECT_NAME} PRIVATE -O0 -g3)
+    endif()
+elseif(NOT MSVC)
     target_compile_options(${PROJECT_NAME} PRIVATE -O3)
 endif()
 
