cmake fixes test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,25 +12,20 @@ set(cute_HDR ${cute_INC_DIR}/cute.h)
 add_library(cute INTERFACE)
 target_include_directories(cute INTERFACE ${cute_INC_DIR})
 
-get_directory_property(cute_PARENT PARENT_DIRECTORY)
-if (NOT ${cute_PARENT})
-  set(cute_DEVEL TRUE)
-elseif (NOT ${cute_DEVEL})
-  set(cute_DEVEL FALSE)
-endif ()
-if (${cute_DEVEL} AND EXISTS ${cute_TEST_DIR})
-  if (NOT cute_PARENT)
+if (EXISTS ${cute_TEST_DIR})
+  get_directory_property(cute_PARENT PARENT_DIRECTORY)
+  if (NOT ${cute_PARENT} OR cute_DEVEL)
     enable_testing()
-  endif ()
 
-  file(GLOB cute_TEST_SRCS ${cute_TEST_SRCS} ${cute_TEST_DIR}/*.c)
-  foreach (cute_TEST_SRC ${cute_TEST_SRCS})
-    get_filename_component(cute_TEST_NAME ${cute_TEST_SRC} NAME_WE)
-    add_executable(test_${cute_TEST_NAME} ${cute_TEST_SRC})
-    add_dependencies(test_${cute_TEST_NAME} cute)
-    target_link_libraries(test_${cute_TEST_NAME} cute)
-    add_test(${cute_TEST_NAME} test_${cute_TEST_NAME})
-  endforeach ()
+    file(GLOB cute_TEST_SRCS ${cute_TEST_SRCS} ${cute_TEST_DIR}/*.c)
+    foreach (cute_TEST_SRC ${cute_TEST_SRCS})
+      get_filename_component(cute_TEST_NAME ${cute_TEST_SRC} NAME_WE)
+      add_executable(test_${cute_TEST_NAME} ${cute_TEST_SRC})
+      add_dependencies(test_${cute_TEST_NAME} cute)
+      target_link_libraries(test_${cute_TEST_NAME} cute)
+      add_test(${cute_TEST_NAME} test_${cute_TEST_NAME})
+    endforeach ()
+  endif ()
 endif ()
 
 install(FILES ${cute_HDR}
